# something

./: .gitignore  CMakeLists.txt  Makefile  README.md
res/: bgm.dmf  bgm.vgm  bgm2.dmf  bgm2.vgm  resources.res
src/: main.c
src/boot/: rom_head.c
